--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,37 @@
-# # Rust build artifacts
-# /target/
-# **/*.rs.bk
-# Cargo.lock
+# Python
+__pycache__/
+*.py[cod]
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.env
+venv/
 
-# # IDE and editor files
-# .vscode/
-# .idea/
-# *.swp
-# *.swo
-# .DS_Store
+# Rust
+target/
+Cargo.lock
+**/*.rs.bk
+*.pdb
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 
 # # Environment and configuration files
 # .env
